infrastructure/controllers/traefik/production/external/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-external
spec:
  controllerName: traefik.io/gateway-controller/external
